--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "format": "prettier --write 'src/**/*.{ts,vue,css,scss,html}'"
   },
   "dependencies": {
+    "axios": "^1.7.3",
+    "element-plus": "^2.7.8",
+    "qs": "^6.13.0",
     "vue": "^3.4.31"
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
+    "@types/qs": "^6.9.15",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "@vitejs/plugin-vue": "^5.0.5",
@@ -29,6 +33,8 @@
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.18.2",
+    "unplugin-vue-components": "^0.27.3",
     "vite": "^5.3.4",
     "vite-tsconfig-paths": "^4.3.2",
     "vue-tsc": "^2.0.24"
