--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "format": "prettier --write 'src/**/*.{ts,vue,css,scss,html}'"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.3",
     "element-plus": "^2.7.8",
+    "pinia": "^2.2.0",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "qs": "^6.13.0",
-    "vue": "^3.4.31"
+    "vue": "^3.4.31",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
@@ -33,6 +37,7 @@
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.2.2",
+    "typescript-vue-plugin": "^1.8.27",
     "unplugin-auto-import": "^0.18.2",
     "unplugin-vue-components": "^0.27.3",
     "vite": "^5.3.4",
